torrents/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: torrents
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui-port
      port: 8080
