torrents/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: torrents
spec:
  tls:
    - secretName: torrents-tls-secret
      hosts:
        - torrents.home.ruchij.com
  rules:
    - host: torrents.home.ruchij.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: qbittorrent-service
                port:
                  name: webui-port
